add: roadmap get all endpoint
